--- a/web/templates/pages/about.html
+++ b/web/templates/pages/about.html
@@ -26,8 +26,7 @@
 			<div class="col-lg-6 col-sm-5">
 				<div class="clearfix">
 					<a href="https://www.google.si/maps/place/Kersnikova+ulica+4/@46.0558232,14.5040802,17z/data=!4m3!3m2!1s0x4765329e4492e579:0x228cf6142750beae!4b1" target="_blank">
-					<iframe frameborder="0" style="border:0"src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDeeTTMCKwoF-Np6-hzX2JuTiTsEk-SDYA
-&q=Kersnikova+ulica+4,Ljubljana">
+					<iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDeeTTMCKwoF-Np6-hzX2JuTiTsEk-SDYA&q=Kersnikova+ulica+4,Ljubljana", >
 					</iframe>
 					</a>
 				</div>
