Modify project and tasks templates to check for permissions of logged in user (to add new, change existing, ..)

--- a/web/templates/pages/projects.html
+++ b/web/templates/pages/projects.html
@@ -16,7 +16,7 @@
 		</div>
 	</div>
 
-	{% if user.is_authenticated %}
+	{% if perms.api.add_project %}
 		<div class="row">
 			<div class="col-lg-6 col-sm-7">
 				<a class="btn btn-default" href="{% url 'project-new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"> Add new</span></a>
