--- a/web/templates/pages/project_detail.html
+++ b/web/templates/pages/project_detail.html
@@ -5,8 +5,10 @@
 		<div class="row">
 			<div class="col-md-8 col-xs-6">
 				<h1><a href="{% url 'project-detail' project_id=project.project_id %}">{{ project.project_name }}</a></h1>
-				{% if user.is_authenticated %}
+				{% if perms.api.add_project %}
 					<a class="btn btn-default" href="{% url 'project-new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"> Add new</span></a>
+				{% endif %}					
+				{% if perms.api.change_project %}					
 					<a class="btn btn-default" href="{% url 'project-edit' project_id=project.project_id %}"><span class="glyphicon glyphicon-pencil"> Edit</span></a>
 				{% endif %}
 			</div>
