--- a/web/templates/pages/members.html
+++ b/web/templates/pages/members.html
@@ -23,9 +23,7 @@
 	</div>
     
 	<div class="row">
-		{% for member in members_list %}
-			{{ forloop.counter }}
-			{% if member.activity_status == 'MENTOR' %}
+		{% for member in mentors_list %}
 				<div class="col-md-3 col-xs-6">
 					<a href="{% url 'pages-member-detail' user_id=member.id %}">
 						{% if member.profile_picture %}
@@ -44,16 +42,15 @@
 					</a> 
 				</div>
 			{% if forloop.last %}
-				</div><!-- closing row class when there are no more members in the list-->
+	</div><!-- closing row class when there are no more members in the list-->
 			{% else %}
 				{% if forloop.counter|divisibleby:"4" %}
-					</div><!-- closing row class after 4 memember in a row-->
-					<div class="row"><!--adding a new row class for the next line of members-->
+	</div><!-- closing row class after 4 memember in a row-->
+	<div class="row"><!--adding a new row class for the next row of members-->
 				{% endif %}
 			{% endif %}
-			{% endif %}<!--closing if for activity_status-->
 			{% empty %}
-				<p> There are no members in the group.</p>
+				<p> There are no mentors in the group.</p>
 			{% endfor %}
 	
 	<div class="row">
@@ -63,8 +60,7 @@
 	</div>
 	
 	<div class="row">
-		{% for member in members_list %}
-			{% if member.activity_status == 'ACTIVE' or member.activity_status == 'SLEEPY' or member.activity_status == 'LAZY'%}
+		{% for member in kittens_list %}
 				<div class="col-md-3 col-xs-6">
 					<a href="{% url 'pages-member-detail' user_id=member.id %}">
 						{% if member.profile_picture %}
@@ -83,16 +79,15 @@
 					</a> 
 				</div>
 			{% if forloop.last %}
-				</div><!-- closing row class when there are no more members in the list-->
+	</div><!-- closing row class when there are no more members in the list-->
 			{% else %}
 				{% if forloop.counter|divisibleby:"4" %}
-					</div><!-- closing row class after 4 memember in a row-->
-					<div class="row"><!--adding a new row class for the next line of members-->
+	</div><!-- closing row class after 4 memember in a row-->
+	<div class="row"><!--adding a new row class for the next line of members-->
 				{% endif %}
 			{% endif %}
-			{% endif %}<!--closing if for activity_status-->
 			{% empty %}
-				<p> There are no members in the group.</p>
+				<p> There are no kittens in the group.</p>
 			{% endfor %}
 
 {% endblock content%}
