--- a/web/templates/pages/members.html
+++ b/web/templates/pages/members.html
@@ -21,7 +21,7 @@
 			<h3>Mentors</h3>
 		</div>
 	</div>
-    
+<div class="members">    
 	<div class="row">
 		{% for member in mentors_list %}
 				<div class="col-md-3 col-xs-6">
@@ -89,5 +89,5 @@
 			{% empty %}
 				<p> There are no kittens in the group.</p>
 			{% endfor %}
-
+</div>
 {% endblock content%}
