--- a/web/templates/pages/project_edit.html
+++ b/web/templates/pages/project_edit.html
@@ -113,16 +113,16 @@
 						<span class="help-block col-sm-9 col-sm-offset-3">{{ projectform.project_owner.errors }}</span>
 					{% endif %}
 				</div>
-				<div class="form-group {% if projectform.user_project.errors %}has-error{% endif %}">
-					<label for="{{ projectform.user_project.auto_id }}" class="col-sm-3 control-label">
-						{% if projectform.user_project.field.required %}*{% endif %}
-						{{ projectform.user_project.label }}
+				<div class="form-group {% if projectform.project_members.errors %}has-error{% endif %}">
+					<label for="{{ projectform.project_members.auto_id }}" class="col-sm-3 control-label">
+						{% if projectform.project_members.field.required %}*{% endif %}
+						{{ projectform.project_members.label }}
 					</label>
 					<div class="col-sm-9">
-						{{ projectform.user_project }}
+						{{ projectform.project_members }}
 					</div>
-					{% if projectform.user_project.errors %}
-						<span class="help-block col-sm-9 col-sm-offset-3">{{ projectform.user_project.errors }}</span>
+					{% if projectform.project_members.errors %}
+						<span class="help-block col-sm-9 col-sm-offset-3">{{ projectform.project_members.errors }}</span>
 					{% endif %}
 				</div>
 			</div>
