--- a/web/templates/pages/project_detail.html
+++ b/web/templates/pages/project_detail.html
@@ -20,7 +20,7 @@
 			</div>
 			<div class="col-md-8 col-xs-6">
 				<p><strong>Project launch date:</strong> {{ project.date_created|date:"d.m.Y" }}</p>
-				<p><strong>Current status:</strong> {{ project.get_status_id_display }}</p>
+				<p><strong>Current status:</strong> {{ project.get_status_display }}</p>
 				{% if project.project_deadline %}
 					<p><strong>Project deadline:</strong> {{ project.project_deadline|date:"d.m.Y" }}</p>
 				{% endif %}
