Added button to delete task and filter out deleted tasks

--- a/web/templates/pages/tasks.html
+++ b/web/templates/pages/tasks.html
@@ -36,6 +36,9 @@
 								<div>
 									<a class="btn btn-default" href="{% url 'task-edit' task_id=task.id %}">Edit</a>
 								</div>
+							{% endif %}
+							{% if perms.api.delete_task %}					
+									<a class="btn btn-default" href="{% url 'task-delete' task_id=task.id %}"><span class="glyphicon glyphicon-remove"> Delete</span></a>
 							{% endif %}	
 					</div>
 					{% if forloop.last %}
