--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -15,7 +15,7 @@
 	</head>
 
 	<body data-spy="scroll" data-target="#topnav">
-		<div class="navbar navbar-inverse navbar-fixed-top" id="topnav">
+		<div class="navbar navbar-inverse navbar-default" id="topnav">
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
