add class to tasks row

--- a/web/templates/pages/project_detail.html
+++ b/web/templates/pages/project_detail.html
@@ -41,7 +41,7 @@
 		</div>
 		{% if task_list %}
 			<p><strong>Tasks:</strong></p>
-			<div class="row">
+			<div class="row container">
 				{% for task in task_list %}
 					<div class="col-md-8 col-xs-6">
 						<p>{{ task.title }}</p>
