fixed the missed div ending tag when there is no events

--- a/web/templates/pages/events.html
+++ b/web/templates/pages/events.html
@@ -46,6 +46,7 @@
 		{% endif %}
 	{% empty %}
 		<p>There are currently no events.</p>
+	</div>
 	{% endfor %}
 
 	<h3><a href="/gallery">Gallery</a></h3>
