fixed the missing closing div in projects

--- a/web/templates/pages/projects.html
+++ b/web/templates/pages/projects.html
@@ -47,5 +47,6 @@
 		{% endif %}
 	{% empty %}
 		<p>There are currently no projects in your projects list.</p>
+	</div>
 	{% endfor %}
 {% endblock content %}
