--- a/web/templates/pages/events.html
+++ b/web/templates/pages/events.html
@@ -12,7 +12,7 @@
 
 	<div class="row">
 		<div class="col-lg-6 col-sm-5">
-			<p>This page shows all our events and photo gallery.</p>
+			<p>This page shows all our events.</p>
 		</div>
 	</div>
 
