--- a/web/templates/pages/project_detail.html
+++ b/web/templates/pages/project_detail.html
@@ -58,18 +58,19 @@
 					</div>
 			</div>
 		</div>
-		{% if task_list %}
-			<p><strong>Tasks:</strong></p>
-			<div class="row container">
-				{% for task in task_list %}
-					<div class="col-md-8 col-xs-6">
-						<p>{{ task.title }}</p>
-					</div>
-				{% endfor %}
-			</div>
-		{% endif %}
+		{% if user.is_authenticated %}
+			{% if task_list %}
+				<p><strong>Tasks:</strong></p>
+				<div class="row container">
+					{% for task in task_list %}
+						<div class="col-md-8 col-xs-6">
+							<p class="highlight">{{ task.title }}</p>
+						</div>
+					{% endfor %}
+				</div>
+			{% endif %}
 
-		{% if not user.is_authenticated %}
+		{% else %}
 			<div class="row">
 				<div class="col-md-8 col-xs-6">	
 					<p><strong> For update the project you must be logged in. <a href="{% url 'pages-login' %}">Login</a></strong></p>
