--- a/web/templates/pages/tasks.html
+++ b/web/templates/pages/tasks.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}All CodeCatz Tasks{% endblock %}
+{% block title %}My Tasks{% endblock %}
 
 {% block content%}
 
 	<header class="row">
 		<div class="col-lg-6 col-sm-7">
-			<h1>All CodeCatz Tasks</h1>
+			<h1>My Tasks</h1>
 		</div>
 	</header>
 	
