--- a/web/templates/pages/tasks.html
+++ b/web/templates/pages/tasks.html
@@ -20,6 +20,12 @@
 				
 					<div class="col-md-3 col-xs-6">
 						<h1><strong>{{ task.title }}</strong></h1>
+						{% if perms.api.change_task %}
+							<a class="btn btn-default" href="{% url 'task-edit' task_id=task.id %}"><span class="glyphicon glyphicon-pencil"> Edit</span></a>
+						{% endif %}
+						{% if perms.api.delete_task %}
+							<a class="btn btn-default" href="{% url 'task-delete' task_id=task.id %}"><span class="glyphicon glyphicon-remove"> Delete</span></a>
+						{% endif %}
 						<p><strong>Assigned to:</strong> {{ task.assigned_id }}</p>
 						<p><strong>Project status:</strong> {{ task.get_status_display }} </p>
 						<p><strong>Part of project:</strong> <a href="{% url 'web.views.project_detail' project_id=task.project_id.project_id %}"> {{ task.project_id.project_name }}</a></p>
