fixed no members tasks events and projects message

--- a/web/templates/pages/members.html
+++ b/web/templates/pages/members.html
@@ -50,7 +50,9 @@
 				{% endif %}
 			{% endif %}
 			{% empty %}
+			<div class="col-lg-6 col-sm-7 alert alert-info">
 				<p> There are no mentors in the group.</p>
+			</div>
 	</div>
 			{% endfor %}
 	
@@ -88,7 +90,9 @@
 				{% endif %}
 			{% endif %}
 			{% empty %}
+			<div class="col-lg-6 col-sm-7 alert alert-info">	
 				<p> There are no kittens in the group.</p>
+			</div>
 			{% endfor %}
 	</div>
 </div>
