--- a/web/templates/pages/projects.html
+++ b/web/templates/pages/projects.html
@@ -46,7 +46,10 @@
 			{% endif %}
 		{% endif %}
 	{% empty %}
-		<p>There are currently no projects in your projects list.</p>
+	<br></br>
+	<div class="col-lg-6 col-sm-7 alert alert-info">	
+		<p>There are currently no projects in the projects list.</p>
+	</div>
 	</div>
 	{% endfor %}
 {% endblock content %}
