--- a/web/templates/pages/tasks.html
+++ b/web/templates/pages/tasks.html
@@ -58,8 +58,9 @@
 		{% endif %}
 			  
 	{% else %}
-		<div class="alert alert-info">
-			<p>There are currently no tasks in tasks list.</p>
+		<br></br>
+		<div class="col-lg-6 col-sm-7 alert alert-info">
+			<p>There are currently no tasks in the tasks list.</p>
 		</div>
 
 	{% endif %}
