--- a/web/templates/pages/events.html
+++ b/web/templates/pages/events.html
@@ -45,7 +45,9 @@
 			{% endif %}
 		{% endif %}
 	{% empty %}
+	<div class="col-lg-6 col-sm-7 alert alert-info">	
 		<p>There are currently no events.</p>
+	</div>
 	</div>
 	{% endfor %}
 
