--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -36,7 +36,7 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					{% if user.is_authenticated %}
-						<li><a href="{% url 'pages-tasks' %}">My Tasks</a></li>
+						<li><a href="{% url 'pages-tasks' %}">Tasks</a></li>
 					{% endif %}
 					<li class="dropdown" id="menuLogin">
 						{% if user.is_authenticated %}
