--- a/web/templates/pages/projects.html
+++ b/web/templates/pages/projects.html
@@ -19,7 +19,7 @@
 	{% if perms.api.add_project %}
 		<div class="row">
 			<div class="col-lg-6 col-sm-7">
-				<a class="btn btn-default" href="{% url 'project-new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"> Add new</span></a>
+				<a class="btn btn-default" href="{% url 'project-new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"> Add new project</span></a>
 			</div>
 		</div>
 	{% endif %}
