--- a/web/templates/pages/tasks.html
+++ b/web/templates/pages/tasks.html
@@ -16,7 +16,7 @@
 
 	{% if task_assigned %}
 	<br></br>
-	<h1><strong>Assigned:<strong></h1>
+	<h1><strong>Assigned:</strong></h1>
 		<div class="row">
 			{% for task in task_assigned %}	
 					<div class="col-md-3 col-xs-6">
@@ -27,6 +27,7 @@
 						{% if perms.api.delete_task %}
 							<a class="btn btn-default" href="{% url 'task-delete' task_id=task.id %}"><span class="glyphicon glyphicon-remove"> Delete task</span></a>
 						{% endif %}
+						<p><strong>Owned by:</strong> {{ task.owner_id }}</p>
 						<p><strong>Assigned to:</strong> {{ task.assigned_id }}</p>
 						<p><strong>Project status:</strong> {{ task.get_status_display }} </p>
 						<p><strong>Part of project:</strong> <a href="{% url 'web.views.project_detail' project_id=task.project_id.project_id %}"> {{ task.project_id.project_name }}</a></p>
@@ -68,7 +69,7 @@
 	
 	{% if task_owned%}
 	<br></br>
-	<h1><strong>Owned:<strong></h1>
+	<h1><strong>Owned:</strong></h1>
 		<div class="row">
 			{% for task in task_owned %}	
 					<div class="col-md-3 col-xs-6">
@@ -79,6 +80,7 @@
 						{% if perms.api.delete_task %}
 							<a class="btn btn-default" href="{% url 'task-delete' task_id=task.id %}"><span class="glyphicon glyphicon-remove"> Delete task</span></a>
 						{% endif %}
+						<p><strong>Owned by:</strong> {{ task.owner_id }}</p>
 						<p><strong>Assigned to:</strong> {{ task.assigned_id }}</p>
 						<p><strong>Project status:</strong> {{ task.get_status_display }} </p>
 						<p><strong>Part of project:</strong> <a href="{% url 'web.views.project_detail' project_id=task.project_id.project_id %}"> {{ task.project_id.project_name }}</a></p>
