--- a/web/templates/pages/member_detail.html
+++ b/web/templates/pages/member_detail.html
@@ -33,7 +33,7 @@
 				{% endif %}
 				{% if userprofile.website %}
 					<p><strong>Web Site:</strong></p>
-					<p>{{ userprofile.website }}</p>
+					<p><a href="{{ userprofile.website }}">{{ userprofile.website }}</a></p></p>
 				{% endif %}
 			</div>
 			<div class="col-md-8 col-xs-6">
