--- a/web/templates/pages/about.html
+++ b/web/templates/pages/about.html
@@ -14,23 +14,10 @@
 
 		<div class="row">
 			<div class="col-md-8">
-				<p>TrackCat  was first an ice-breaker to coding for a group of girls in 2014. It is a project created through <a href="http://codecatz.org">*CodeCatz</a> - a coding study group where women are always in majority.</p> 
-				<p>Since the best way to learn is by doing, we set up this page and along the way learned in practice how HTML, CSS and Django work. Now its time for other projects. What we will create next will be seen in our <a href="/projects"> Projects page</a>.</p>
-				</br>
-				<p>* The objective of CodeCatz is to assist women to enter the world of coding and change the world. Anyone can join. There are only two rules for the members: chocolate at the meetings and <strong>full dedication</strong> to coding.</p>
-				<p> We code together <strong>every Wednesday at 17:30</strong> at RAMPA Laboratorij, Kersnikova ulica 4, Ljubljana.</p>
-			</br>	
+				<p>TrackCat  was first an ice-breaker to coding for a group of girls in 2014. It is a project created through <a href="http://codecatz.org">CodeCatz</a> - a coding study group where women are always in majority.</p> 
+				<p>Since the best way to learn is by doing, we set up this page and along the way learned in practice how HTML, CSS and Django work. Now its time for other projects. What we will create next will be seen in our <a href="/projects"> Projects page</a>.</p>	
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-lg-6 col-sm-5">
-				<div class="clearfix">
-					<a href="https://www.google.si/maps/place/Kersnikova+ulica+4/@46.0558232,14.5040802,17z/data=!4m3!3m2!1s0x4765329e4492e579:0x228cf6142750beae!4b1" target="_blank">
-					<iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDeeTTMCKwoF-Np6-hzX2JuTiTsEk-SDYA&q=Kersnikova+ulica+4,Ljubljana", >
-					</iframe>
-					</a>
-				</div>
-			</div>
-		</div>
+		
 {% endblock content%}
 
