--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,28 @@
 	margin-top: 20px;
 }
 
+.nav-container{
+	background-color: #212121;
+	margin-left: auto;
+	margin-right:auto;
+}
+
+.nav-tab{
+	display:block;
+	font-weight: 600;
+	padding:0;
+	background-color: #212121;
+
+}
+.nav-tab.active{
+	color: #212121;
+	background-color: #aecb54;
+	border-color: #212121;
+	border-width: 3px 0 3px 0;
+	border-style: solid;
+}
+
+
 #gbCountdown {
 	color: #FFFFFF;
 }
@@ -30,7 +52,6 @@ body {
 }
 
 #wrap {
-	margin-top:110px;
 	min-height:100%;
 }
 
@@ -137,5 +158,47 @@ h4 {
 	width: 50px;
 	height: 50px;
 	margin: 5px;
+}
 
+.tcframe {
+	min-height: 20px;
+	padding: 19px;
+	margin: 10px;
+	background-color: #ffffff;
+	border: 1px solid #AECC52;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+		  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+.tcname {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	margin-bottom: 3px;
+	margin-top: 0;
+}
+/*Overwrite Bootstrap defaults*/
+
+a {
+	color: #A8CD54;
+	text-decoration: none;
+}
+
+a:hover,
+a:focus {
+	color: #A8CD54;
+	text-decoration: underline;
+}
+
+.navbar-default .navbar-nav>li>a {
+	color: #A8CD55;
+}
+
+.navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>li>a:focus {
+	color: #fff;
+	background-color: transparent;
+}
+.icon-title{
+	color:#A8CD55;
 }
