Changed the title and intro on project page

--- a/web/templates/pages/projects.html
+++ b/web/templates/pages/projects.html
@@ -6,13 +6,13 @@
 
 	<header class="row">
 		<div class="col-lg-6 col-sm-7">
-			<h1>All CodeCatz Projects</h1>
+			<h1>CodeCatz Projects</h1>
 		</div>
 	</header>
 	
 	<div class="row">
 		<div class="col-lg-6 col-sm-5">
-			<p>This page shows all our projects and who is working on what.</p>
+			<p>Who is working on what...</p>
 		</div>
 	</div>
 
