--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-
 {% load staticfiles %}
 {% load current from navigation %}
 
@@ -11,6 +9,7 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
+	<link rel="stylesheet" href="{% static 'css/lightbox.css' %}" >
 	{% block custom_css %}{% endblock %}
 </head>
 
@@ -112,10 +111,10 @@
 	</div><!-- /container -->
 </footer>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="{% static 'js/jquery.datetimepicker.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/lightbox.js' %}"></script>
 {% block custom_js %}{% endblock custom_js %}
 
 </body>
