--- a/web/templates/pages/member_detail.html
+++ b/web/templates/pages/member_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}TrackCat Member{% endblock %}
 
 {% block content%}
@@ -24,8 +24,20 @@
 			<div class="col-md-4 col-xs-6">
 				<div class="members">
 				{% if userprofile.profile_picture %}
+					<a href="{{ MEDIA_URL }}{{ userprofile.profile_picture.url|default_if_none:"" }}" 
+					data-lightbox="{% if userprofile.user.first_name %}
+										{{ userprofile.user.first_name }} 
+									{% else %}
+										{{ userprofile.user.username }}
+									{% endif %}" 
+					data-title="{% if userprofile.user.first_name %}
+										{{ userprofile.user.first_name }} 
+									{% else %}
+										{{ userprofile.user.username }}
+									{% endif %}" >
 					<img src="{{ MEDIA_URL }}{{ userprofile.profile_picture.url|default_if_none:"" }}" alt="{{ userprofile.user.first_name }}" />
-				{% endif %}
+					</a>
+					{% endif %}
 				</div>
 				{% if userprofile.user.username %}
 					<p><strong>GitHub Link:</strong></p>
@@ -50,5 +62,4 @@
 		<p class="alert alert-warning">This member does not exist.</p>
 		<p>Return to <a href="{% url 'pages-members' %}">Members</a></p>
 	{% endif %}
-
 {% endblock content%}
