--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% load staticfiles %}
 {% load current from navigation %}
 
@@ -114,6 +115,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="{% static 'js/jquery.datetimepicker.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/script.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/lightbox.js' %}"></script>
 {% block custom_js %}{% endblock custom_js %}
 
